[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "expycted"
description = "Because tests should be easy to read"
requires-python = ">=3.7"
authors = [
    { name = "Dov Benyomin Sohacheski", email = "support@expycted.com" },
    { name = "Petereon", email = "pvyboch1@gmail.com" }
]
license = { text = "MIT" }
keywords = [
    "expect",
    "expect-pattern",
    "testing",
    "test",
    "matchers"
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Natural Language :: English",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed"
]
dynamic = ["version", "readme"]


[project.urls]
"Homepage" = "https://github.com/bdsoha/expycted"
"Bug Tracker" = "https://github.com/bdsoha/expycted/issues"


[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-pspec",
    "pytest-clarity",
]
ci = [
    "build",
    "expycted[dev]"
]


[tool.setuptools]
package-dir = { "" = "src" }


[tool.setuptools.dynamic]
version = { attr = "expycted.__version__" }
readme = { file = ["README.md"] }


[tool.pytest.ini_options]
python_files = ["*test*.py"]
python_functions = ["test"]
minversion = "6.0"
addopts = [
    "--pspec",
    "--cov=expycted",
    "--cov-report=term-missing"
]
testpaths = ["test"]
