[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "expycted"
description = "Because tests should be easy to read"
requires-python = ">=3.7"
authors = [
    { name = "Dov Benyomin Sohacheski", email = "support@expycted.com" },
    { name = "Petereon", email = "pvyboch1@gmail.com" }
]
license = { text = "MIT" }
keywords = [
    "expect",
    "expect-pattern",
    "testing",
    "test",
    "matchers"
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Natural Language :: English",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed"
]
dynamic = ["version", "readme"]


[project.urls]
"Homepage" = "https://github.com/bdsoha/expycted"
"Bug Tracker" = "https://github.com/bdsoha/expycted/issues"
"Source Code" = "https://github.com/bdsoha/expycted"


[project.optional-dependencies]
dev = [
    "black",
    "coverage[toml]",
    "isort",
    "mypy",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "pytest-clarity",
    "ruff",
    "tomli",
    "wrapt",
]
ci = [
    "build",
    "expycted[dev]"
]


[tool.setuptools]
package-dir = { "" = "src" }


[tool.setuptools.dynamic]
version = { attr = "expycted.__version__" }
readme = { file = ["README.md"] }


[tool.pytest.ini_options]
python_files = ["*test*.py"]
addopts = [
    "--cov=expycted",
    "--cov-report=term-missing"
]


[tool.coverage.report]
exclude_lines = [
    "@(abc\\.)?abstractmethod"
]


[tool.isort]
add_imports = ["from __future__ import annotations"]
profile = "black"
from_first = true
multi_line_output = 3
src_paths = ["src", "test"]
known_helpers = "helpers"
sections = [
    "FUTURE",
    "STDLIB",
    "THIRDPARTY",
    "FIRSTPARTY",
    "HELPERS",
    "LOCALFOLDER"
]


[tool.ruff.per-file-ignores]
"test/helpers/stubs.py" = ["E731"]


[tool.mypy]
mypy_path  = ["stubs", "src"]
exclude = [
    "^test/*"
]
